<resources>
    <string name="app_name">HLCT资产管理</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_name">登录名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="title_activity_stocktaking">StocktakingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stocktaking_running">进行盘点</string>
    <string name="stocktaking_person">盘点人：</string>
    <string name="stocktaking_counted">已盘点：</string>
    <string name="hint_person">测试用</string>
    <string name="hint_111">111</string>
    <string name="stocktaking_data">盘点日期：</string>
    <string name="stocktaking_count">盘点总数：</string>
    <string name="hint_date">2017-7-25</string>
    <string name="start_stocktaking">开始盘点</string>
    <string name="commit_data">上传数据</string>
    <string name="stocktaking_plan">盘点计划</string>
    <string name="serial_number">编号：</string>
    <string name="assert_name">资产名称：</string>
    <string name="hint_assert_name">测试-笔记本</string>
    <string name="rfid">RFID：</string>
    <string name="hint_rfid">123456789012345678901234</string>
    <string name="assert_type">资产类别：</string>
    <string name="hint_assert_type">电子产品</string>
    <string name="assert_user">使用人：</string>
    <string name="assert_user_department">所属部门：</string>
    <string name="assert_user_unit">所属单位：</string>
    <string name="assert_stocktaking">资产盘点</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="hint_assert_department">科技部</string>
    <string name="cancel">取消</string>
    <string name="scan">扫描</string>
    <string name="assert_number">资产编号</string>
    <string name="detail_info">详情</string>
    <string name="ex_assert_info">原资产信息</string>
    <string name="rfid_scan">使用RFID扫描</string>
    <string name="QR_scan">使用二维码扫描</string>
</resources>
