<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:background="@color/cardview_light_background"
    android:clickable="true"
    android:contentDescription="盘点计划详情展示"
    android:elevation="2dp"
    android:foreground="?selectableItemBackground"
    app:contentPadding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="40dp"
        android:text="@string/serial_number"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/stocktaking_detail_card_assert_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:hint="@string/hint_111"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/assert_name"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/stocktaking_detail_card_assert_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:hint="@string/hint_assert_name"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorDivider"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="52dp"
        android:text="@string/rfid"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/stocktaking_detail_card_assert_rfid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="52dp"
        android:hint="@string/hint_rfid"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/assert_type"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/stocktaking_detail_card_assert_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="84dp"
        android:hint="@string/hint_assert_type"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/assert_user"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/stocktaking_detail_card_assert_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="116dp"
        android:hint="@string/hint_person"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/assert_user_department"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/stocktaking_detail_card_assert_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="148dp"
        android:hint="@string/hint_person"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/assert_user_unit"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/stocktaking_detail_card_assert_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="180dp"
        android:hint="@string/hint_person"
        android:textSize="18sp"/>

</android.support.v7.widget.CardView>