<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:background="@color/cardview_light_background"
    android:clickable="true"
    android:elevation="2dp"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="6dp"
    app:contentPadding="16dp">

    <ImageView
        android:id="@+id/stocktaking_plan_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/stocktaking"/>

    <TextView
        android:id="@+id/stocktaking_plan_title"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="44dp"
        android:gravity="center"
        android:hint="@string/stocktaking_plan"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="52dp"
        android:text="@string/stocktaking_data"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/stocktaking_plan_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="52dp"
        android:hint="@string/hint_date"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="52dp"
        android:text="@string/stocktaking_person"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="84dp"
        android:text="@string/stockingtaking_count"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/stocktaking_plan_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="84dp"
        android:hint="@string/hint_111"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="84dp"
        android:text="@string/stocktaking_counted"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/stocktaking_plan_counted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="284dp"
        android:layout_marginTop="84dp"
        android:hint="@string/hint_111"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/stocktaking_plan_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="284dp"
        android:layout_marginTop="52dp"
        android:hint="@string/hint_person"
        android:maxLines="1"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/stocktaking_plan_tv_start"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:background="@drawable/tv_ripple_bg"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:text="@string/start_stocktaking"
        android:textColor="@color/colorCardBlue"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/stocktaking_plan_tv_commit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="124dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/tv_ripple_bg"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:text="@string/commit_data"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        />

</android.support.v7.widget.CardView>


