<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hlct.android.activity.StocktakingDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:contentInsetStart="0dp"
        android:elevation="4dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_stocktaking_detail_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tool_bar_tv_bg"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/assert_info"
                android:padding="14dp"
                android:layout_marginRight="56dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="24sp"/>

            <!--<TextView
                android:id="@+id/activity_stocktaking_detail_tv_scan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tool_bar_tv_bg"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/scan"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"/>-->
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/activity_stocktaking_detail_line1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <TextView
            android:id="@+id/tv_ex_assert_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="16dp"
            android:text="@string/ex_assert_info"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_stocktaking_detail_line2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/tv_border_bg"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_stocktaking_detail_line1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:padding="8dp"
                android:text="@string/assert_name"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_stocktaking_detail_tv_assert_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:hint="@string/hint_assert_name"
                android:padding="8dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:padding="8dp"
                android:text="@string/assert_type"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_stocktaking_detail_tv_assert_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:hint="@string/hint_assert_type"
                android:padding="8dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rfid"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_stocktaking_detail_tv_assert_rfid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:hint="@string/hint_rfid"
                android:padding="8dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/assert_user"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/activity_stocktaking_detail_tv_assert_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:hint="@string/hint_assert_type"
                android:padding="8dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/assert_user_department"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_stocktaking_detail_tv_assert_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:hint="@string/hint_assert_department"
                android:padding="8dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/assert_user_unit"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_stocktaking_detail_tv_assert_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:hint="@string/hint_assert_department"
                android:padding="8dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/assert_costing"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_stocktaking_detail_tv_assert_costing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_border_bg"
                android:hint="@string/hint_111"
                android:padding="8dp"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
