<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".activity.LoginActivity">
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:repeat_mode="restart"
        app:duration="3000"
        >
        <TextView
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription=""
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="56sp"
            android:maxLines="1"/>
    </com.facebook.shimmer.ShimmerFrameLayout>


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/loginName_tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:ellipsize="end"
                    android:hint="@string/login_name"
                    android:completionThreshold="1"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:dropDownHorizontalOffset="5dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/password_et_login"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:ellipsize="end"
                    android:hint="@string/password"
                    android:textSize="20sp"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:textSize="24sp"
                android:id="@+id/login_bt_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/activity_login_finger_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finger_login"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:clickable="true"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
